iodine (0.5.2-2) UNRELEASED; urgency=low

  * Add Russian debconf translation, thanks to Yuri Kozlov (closes: #546345).
  * Set Standards-Version to 3.8.3 (no changes).

 -- gregor herrmann <gregoa@debian.org>  Sun, 13 Sep 2009 00:49:03 +0200

iodine (0.5.2-1) unstable; urgency=low

  * New upstream release.

 -- gregor herrmann <gregoa@debian.org>  Tue, 02 Jun 2009 18:03:31 +0200

iodine (0.5.1-2) unstable; urgency=low

  * (Re-)add a warning to README.Debian that both client and server needs to
    run the same protocol version (cf. #521260).
  * Create /var/run/iodine in init script if it doesn't exist; thanks to
    martin f krafft for the bug report (closes: #521259).

 -- gregor herrmann <gregoa@debian.org>  Thu, 26 Mar 2009 17:45:24 +0100

iodine (0.5.1-1) unstable; urgency=low

  * New upstream release.
  * Refresh 03_cflags.patch.
  * Set Standards-Version to 3.8.1 (no changes).
  * debian/copyright: add an additional copyright holder.

 -- gregor herrmann <gregoa@debian.org>  Sat, 21 Mar 2009 20:23:26 +0100

iodine (0.5.0-3) unstable; urgency=low

  * Improvements in init script, main point: be less verbose when iodined is
    configured not to start; thanks to Yves-Alexis Perez for the bug report
    (closes: #514693).
  * Upload to unstable.

 -- gregor herrmann <gregoa@debian.org>  Sun, 15 Feb 2009 02:19:15 +0100

iodine (0.5.0-2) experimental; urgency=low

  * Update example script iodine-jigger; thanks to Stephan Walter for the bug
    report and to Barak A. Pearlmutter for the updated version; add gawk to
    Suggests (closes: #513221).

 -- gregor herrmann <gregoa@debian.org>  Thu, 29 Jan 2009 22:03:44 +0100

iodine (0.5.0-1) experimental; urgency=low

  * New upstream release.
  * debian/copyright: update years of upstream copyright.
  * Install the new protocol descriptions under doc/*.
  * Refresh patch 03_cflags.patch; drop patch 04_base64.patch, the base64
    stuff is used now.